--- a/lib/kube/production/temporal-deployment.yaml
+++ b/lib/kube/production/temporal-deployment.yaml
@@ -8,7 +8,7 @@ metadata:
     version: $GITHUB_SHA
   annotations:
     secrets.doppler.com/reload: 'true'
-    checkov.io/skip1: CKV_K8S_35=App uses third party docker images
+    checkov.io/skip1: CKV_K8S_35=Third-party Temporal container uses simplified probes
 spec:
   replicas: 1
   strategy:
@@ -203,7 +203,7 @@ spec:
             failureThreshold: 5
 
         - name: python-worker
-          image: $KUBE_DEPLOYMENT_IMAGE:$KUBE_DEPLOY_TAG@$KUBE_DEPLOY_DIGEST
+          image: $KUBE_DEPLOYMENT_IMAGE
           imagePullPolicy: Always
           workingDir: /opt/app/src/apps/backend
           # Security: Block privilege escalation, make filesystem read-only, drop all capabilities
@@ -215,15 +215,14 @@ spec:
               drop:
                 - ALL
           command: ['pipenv', 'run', 'python', 'temporal_server.py']
-          envFrom:
-            - secretRef:
-                name: $DOPPLER_MANAGED_SECRET_NAME
           volumeMounts:
             # Security: Use temporary volumes for writable directories since root filesystem is read-only
             - name: tmp
               mountPath: /opt/app/tmp
             - name: logs
               mountPath: /opt/app/logs
+            - name: doppler-secrets
+              mountPath: /opt/app/secrets
           livenessProbe: 
             exec:
               command: ["true"]
@@ -250,4 +249,6 @@ spec:
           emptyDir: {}
         - name: temporal-ui-config
           emptyDir: {}
-
+        - name: doppler-secrets
+          secret:
+            secretName: $DOPPLER_MANAGED_SECRET_NAME
