--- a/lib/kube/shared/cronjob.yaml
+++ b/lib/kube/shared/cronjob.yaml
@@ -43,6 +43,10 @@ spec:
                 readOnlyRootFilesystem: true
                 runAsNonRoot: true
                 runAsUser: 10001
+                runAsGroup: 10001
+                capabilities:
+                  drop:
+                    - ALL
               resources:
                 limits:
                   cpu: 500m
