--- a/lib/kube/shared/cronjob.yaml
+++ b/lib/kube/shared/cronjob.yaml
@@ -41,6 +41,7 @@ spec:
                 runAsNonRoot: true
                 runAsUser: 10001
                 runAsGroup: 10001
+                fsGroup: 10001
                 capabilities:
                   drop:
                     - ALL
