--- a/lib/kube/preview/deployment.yaml
+++ b/lib/kube/preview/deployment.yaml
@@ -17,7 +17,6 @@ metadata:
     version: $GITHUB_SHA
   annotations:
     secrets.doppler.com/reload: 'true'
-    checkov.io/skip1: CKV_K8S_35=App uses third party containers
 spec:
   replicas: 1
   selector:
@@ -52,7 +51,7 @@ spec:
         - name: regcred
       containers:
         - name: $KUBE_APP
-          image: $KUBE_DEPLOYMENT_IMAGE:$KUBE_DEPLOY_TAG@$KUBE_DEPLOY_DIGEST
+          image: $KUBE_DEPLOYMENT_IMAGE:$KUBE_DEPLOYMENT_TAG@$KUBE_DEPLOYMENT_DIGEST
           imagePullPolicy: Always
           # Security: Block privilege escalation, make filesystem read-only, drop all capabilities
           securityContext:
@@ -71,12 +70,13 @@ spec:
               memory: '800Mi' 
           ports:
             - containerPort: 8080
+          command:
+            - /opt/app/scripts/export_doppler_env.sh
+            - npm
+            - start
           env:
             - name: WEB_APP_HOST
               value: $KUBE_INGRESS_HOSTNAME
-          envFrom:
-            - secretRef:
-                name: $DOPPLER_MANAGED_SECRET_NAME
 
           volumeMounts:
             # Security: Use temporary volumes for writable directories since root filesystem is read-only
