--- a/lib/kube/preview/temporal-deployment.yaml
+++ b/lib/kube/preview/temporal-deployment.yaml
@@ -8,7 +8,6 @@ metadata:
     version: $GITHUB_SHA
   annotations:
     secrets.doppler.com/reload: 'true'
-    checkov.io/skip1: CKV_K8S_35=App uses third party containers
 spec:
   replicas: 1
   strategy:
@@ -83,6 +82,21 @@ spec:
             capabilities:
               drop:
                 - ALL
+          command:
+            - /bin/sh
+            - -c
+          args:
+            - |
+              set -eu
+              if [ -d /var/run/doppler-secrets ]; then
+                for secret_file in /var/run/doppler-secrets/*; do
+                  [ -f "${secret_file}" ] || continue
+                  key="$(basename "${secret_file}")"
+                  value="$(cat "${secret_file}")"
+                  export "${key}"="${value}"
+                done
+              fi
+              exec /etc/temporal/entrypoint.sh autosetup
           livenessProbe: 
             exec:
               command: ["true"]
@@ -99,14 +113,13 @@ spec:
           env:
             - name: USER
               value: "temporal"
-          envFrom:
-            - secretRef:
-                name: $DOPPLER_MANAGED_SECRET_NAME
           volumeMounts:
             - name: tmp
               mountPath: /tmp
             - name: temporal-config
               mountPath: /etc/temporal/config
+            - name: doppler-secrets
+              mountPath: /var/run/doppler-secrets
           resources:
             requests:
               cpu: 50m
@@ -126,6 +139,21 @@ spec:
             capabilities:
               drop:
                 - ALL
+          command:
+            - /bin/sh
+            - -c
+          args:
+            - |
+              set -eu
+              if [ -d /var/run/doppler-secrets ]; then
+                for secret_file in /var/run/doppler-secrets/*; do
+                  [ -f "${secret_file}" ] || continue
+                  key="$(basename "${secret_file}")"
+                  value="$(cat "${secret_file}")"
+                  export "${key}"="${value}"
+                done
+              fi
+              exec tini -- sleep infinity
           livenessProbe:
             exec:
               command: ["true"]
@@ -136,12 +164,11 @@ spec:
               command: ["true"]
             initialDelaySeconds: 0
             periodSeconds: 10
-          envFrom:
-            - secretRef:
-                name: $DOPPLER_MANAGED_SECRET_NAME
           volumeMounts:
             - name: tmp
               mountPath: /tmp
+            - name: doppler-secrets
+              mountPath: /var/run/doppler-secrets
           stdin: true
           tty: true
           resources:
@@ -163,16 +190,30 @@ spec:
             capabilities:
               drop:
                 - ALL
+          command:
+            - /bin/sh
+            - -c
+          args:
+            - |
+              set -eu
+              if [ -d /var/run/doppler-secrets ]; then
+                for secret_file in /var/run/doppler-secrets/*; do
+                  [ -f "${secret_file}" ] || continue
+                  key="$(basename "${secret_file}")"
+                  value="$(cat "${secret_file}")"
+                  export "${key}"="${value}"
+                done
+              fi
+              exec ./start-ui-server.sh
           ports:
             - containerPort: 8080
-          envFrom:
-            - secretRef:
-                name: $DOPPLER_MANAGED_SECRET_NAME
           volumeMounts:
             - name: tmp
               mountPath: /tmp
             - name: temporal-ui-config
               mountPath: /home/ui-server/config
+            - name: doppler-secrets
+              mountPath: /var/run/doppler-secrets
           resources:
             requests:
               cpu: 50m
@@ -202,7 +243,7 @@ spec:
             failureThreshold: 5
 
         - name: python-worker
-          image: $KUBE_DEPLOYMENT_IMAGE:$KUBE_DEPLOY_TAG@$KUBE_DEPLOY_DIGEST
+          image: $KUBE_DEPLOYMENT_IMAGE:$KUBE_DEPLOYMENT_TAG@$KUBE_DEPLOYMENT_DIGEST
           imagePullPolicy: Always
           workingDir: /opt/app/src/apps/backend
           # Security: Block privilege escalation, make filesystem read-only, drop all capabilities
@@ -213,7 +254,12 @@ spec:
             capabilities:
               drop:
                 - ALL
-          command: ['pipenv', 'run', 'python', 'temporal_server.py']
+          command:
+            - /opt/app/scripts/export_doppler_env.sh
+            - pipenv
+            - run
+            - python
+            - temporal_server.py
           livenessProbe:
             exec:
               command: ["true"]
@@ -224,17 +270,16 @@ spec:
               command: ["true"]
             initialDelaySeconds: 0
             periodSeconds: 10
-          envFrom:
-            - secretRef:
-                name: $DOPPLER_MANAGED_SECRET_NAME
           volumeMounts:
             # Security: Use temporary volumes for writable directories since root filesystem is read-only
             - name: tmp
               mountPath: /opt/app/tmp
             - name: logs
               mountPath: /opt/app/logs
+            - name: doppler-secrets
+              mountPath: /opt/app/secrets
           resources:
-            requests:
+            requests:                                                                                                                                                                                                                                                                                                 
               cpu: 50m
               memory: '150Mi'
             limits:
@@ -249,4 +294,7 @@ spec:
           emptyDir: {}
         - name: temporal-ui-config
           emptyDir: {}
+        - name: doppler-secrets
+          secret:
+            secretName: $DOPPLER_MANAGED_SECRET_NAME
 
