--- a/lib/kube/shared/cronjob.yaml
+++ b/lib/kube/shared/cronjob.yaml
@@ -34,7 +34,7 @@ spec:
             - name: regcred
           containers:
             - name: $KUBE_APP
-              image: $KUBE_DEPLOYMENT_IMAGE
+              image: $KUBE_DEPLOYMENT_IMAGE:$KUBE_DEPLOY_TAG@$KUBE_DEPLOY_DIGEST
               imagePullPolicy: Always
               # Security: Block privilege escalation, make filesystem read-only, drop all capabilities
               securityContext:
@@ -44,7 +44,12 @@ spec:
                 capabilities:
                   drop:
                     - ALL
-              command: [ "npm", "run", "script", "--file=my_worker_script" ]
+              command:
+                - /opt/app/scripts/export_doppler_env.sh
+                - npm
+                - run
+                - script
+                - --file=my_worker_script
               resources:
                 limits:
                   cpu: 500m
@@ -55,16 +60,18 @@ spec:
               env:
                 - name: WEB_APP_HOST
                   value: $KUBE_INGRESS_HOSTNAME
-              envFrom:
-                - secretRef:
-                    name: $DOPPLER_MANAGED_SECRET_NAME
               volumeMounts:
                 # Security: Use temporary volume for writable directory since root filesystem is read-only
                 - name: tmp
                   mountPath: /opt/app/tmp
+                - name: secret-ref
+                  mountPath: /opt/app/secrets
           volumes:
             - name: tmp
               emptyDir: {}
+            - name: secret-ref
+              secret:
+                secretName: $DOPPLER_MANAGED_SECRET_NAME
           restartPolicy: OnFailure
 
 
