--- a/lib/kube/production/temporal-deployment.yaml
+++ b/lib/kube/production/temporal-deployment.yaml
@@ -84,6 +84,21 @@ spec:
             capabilities:
               drop:
                 - ALL
+          command:
+            - /bin/sh
+            - -c
+          args:
+            - |
+              set -eu
+              if [ -d /var/run/doppler-secrets ]; then
+                for secret_file in /var/run/doppler-secrets/*; do
+                  [ -f "${secret_file}" ] || continue
+                  key="$(basename "${secret_file}")"
+                  value="$(cat "${secret_file}")"
+                  export "${key}"="${value}"
+                done
+              fi
+              exec /etc/temporal/entrypoint.sh autosetup
           ports:
             - containerPort: 7233
           livenessProbe: 
@@ -100,14 +115,13 @@ spec:
           env:
             - name: USER
               value: "temporal"
-          envFrom:
-            - secretRef:
-                name: $DOPPLER_MANAGED_SECRET_NAME
           volumeMounts:
             - name: tmp
               mountPath: /tmp
             - name: temporal-config
               mountPath: /etc/temporal/config
+            - name: doppler-secrets
+              mountPath: /var/run/doppler-secrets
           resources:
             requests:
               cpu: 50m
@@ -127,12 +141,26 @@ spec:
             capabilities:
               drop:
                 - ALL
-          envFrom:
-            - secretRef:
-                name: $DOPPLER_MANAGED_SECRET_NAME
+          command:
+            - /bin/sh
+            - -c
+          args:
+            - |
+              set -eu
+              if [ -d /var/run/doppler-secrets ]; then
+                for secret_file in /var/run/doppler-secrets/*; do
+                  [ -f "${secret_file}" ] || continue
+                  key="$(basename "${secret_file}")"
+                  value="$(cat "${secret_file}")"
+                  export "${key}"="${value}"
+                done
+              fi
+              exec tini -- sleep infinity
           volumeMounts:
             - name: tmp
               mountPath: /tmp
+            - name: doppler-secrets
+              mountPath: /var/run/doppler-secrets
           stdin: true
           tty: true
           livenessProbe: 
@@ -164,16 +192,30 @@ spec:
             capabilities:
               drop:
                 - ALL
+          command:
+            - /bin/sh
+            - -c
+          args:
+            - |
+              set -eu
+              if [ -d /var/run/doppler-secrets ]; then
+                for secret_file in /var/run/doppler-secrets/*; do
+                  [ -f "${secret_file}" ] || continue
+                  key="$(basename "${secret_file}")"
+                  value="$(cat "${secret_file}")"
+                  export "${key}"="${value}"
+                done
+              fi
+              exec ./start-ui-server.sh
           ports:
             - containerPort: 8080
-          envFrom:
-            - secretRef:
-                name: $DOPPLER_MANAGED_SECRET_NAME
           volumeMounts:
             - name: tmp
               mountPath: /tmp
             - name: temporal-ui-config
               mountPath: /home/ui-server/config
+            - name: doppler-secrets
+              mountPath: /var/run/doppler-secrets
           resources:
             requests:
               cpu: 50m
