--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,7 +11,8 @@ services:
         APP_ENV: 'docker-dev'
     environment:
       APP_ENV: 'docker-dev'
-    command: /bin/sh -c "npm install && npm run serve -- --no-temporal"
+    command: /bin/sh -c "chown -R appuser:app /app && npm install && npm run serve -- --no-temporal"
+    user: root
     depends_on:
       app-db:
         condition: service_started
