fix: resolve docker-compose dev environment issues
- Fix bind mount permission issues by running as root user in dev compose
- Use anonymous volume for .venv to prevent empty directory conflicts
- Update docker-compose volumes to match Dockerfile WORKDIR (/opt/app)
- Remove temporal dependency when using --no-temporal flag
- Revert webpack-dev-server to 4.11.1 to fix _assetEmittingPreviousFiles error
  (v5.2.2 introduced in #479 has compatibility issues)
- Update webpack.dev.js with Docker-specific config (host, allowedHosts, client)
- Remove output.clean from base config, enable only in production
- Add .venv, data, logs to .dockerignore to prevent build context issues
- Enhance Dockerfile with virtualenv verification for production readiness
- Ensure .venv permissions are set correctly for appuser (UID 10001)

These changes enable hot reload in docker-compose.dev.yml while maintaining
production compatibility. The Dockerfile changes ensure virtualenv is properly
configured for Kubernetes deployments with readOnlyRootFilesystem.

--- a/.dockerignore
+++ b/.dockerignore
@@ -36,6 +36,11 @@ output
 node_modules
 jspm_packages
 
+# Python virtual environment (created during Docker build)
+.venv
+venv
+env
+
 # optional npm cache directory
 .npm
 
@@ -53,6 +58,10 @@ jspm_packages
 
 # temp files
 tmp
+
+# runtime data directories (created by docker-compose, not needed in image)
+data
+logs
 
 # distribution
 dist
