fix: Resolve docker-compose dev permission and environment issues  (#528)
* fix: resolve docker-compose dev environment issues

- Fix bind mount permission issues by running as root user in dev compose
- Use anonymous volume for .venv to prevent empty directory conflicts
- Update docker-compose volumes to match Dockerfile WORKDIR (/opt/app)
- Remove temporal dependency when using --no-temporal flag
- Revert webpack-dev-server to 4.11.1 to fix _assetEmittingPreviousFiles error
  (v5.2.2 introduced in #479 has compatibility issues)
- Add .venv, data, logs to .dockerignore to prevent build context issues
- Enhance Dockerfile with virtualenv verification for production readiness
- Ensure .venv permissions are set correctly for appuser (UID 10001)

These changes enable hot reload in docker-compose.dev.yml while maintaining
production compatibility. The Dockerfile changes ensure virtualenv is properly
configured for Kubernetes deployments with readOnlyRootFilesystem.

* fix: optimize Dockerfile and docker-compose for dev environment

- Dockerfile: Add PIPENV_VENV_IN_PROJECT and proper .venv ownership for docker-compose compatibility
- Dockerfile: Install dependencies as root, verify venv before switching to appuser
- Dockerfile: Remove duplicate pipenv install calls and unnecessary intermediate copies
- docker-compose.dev.yml: Optimize startup command to skip installs when dependencies exist
- Fixes bind mount permission issues and enables hot reload in local development

* fix: fix package-lock.json

* refactor: optimize Dockerfile by removing duplicate operations and improving layer caching

- Remove duplicate pipenv install --dev (was running twice)
- Remove duplicate npm ci (was running twice)
- Remove unnecessary intermediate copy step (/.project/)
- Improve layer caching by copying dependency files before application code
- Maintain original structure and production compatibility
- Tested with docker-compose.dev.yml - all containers start successfully

* fix: set PI

--- a/.dockerignore
+++ b/.dockerignore
@@ -36,6 +36,9 @@ output
 node_modules
 jspm_packages
 
+# Python virtual environment (created during Docker build)
+.venv
+
 # optional npm cache directory
 .npm
 
@@ -53,6 +56,10 @@ jspm_packages
 
 # temp files
 tmp
+
+# runtime data directories (created by docker-compose, not needed in image)
+data
+logs
 
 # distribution
 dist
