--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -243,14 +243,25 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
       
+      - name: Prepare output directory
+        run: mkdir -p output
+
       - name: Run integration tests
         run: docker compose -f docker-compose.test.yml up --exit-code-from app
+
+      - name: Copy coverage artifacts from volume
+        if: always()
+        run: |
+          docker run --rm \
+            -v test_output:/src \
+            -v ${{ github.workspace }}/output:/dest \
+            alpine sh -c 'if [ -f /src/coverage.xml ]; then cp /src/coverage.xml /dest/coverage.xml; else echo "coverage.xml not found in test_output volume"; fi'
 
       - name: Coverage report
         continue-on-error: true
         uses: irongut/CodeCoverageSummary@51cc3a756ddcd398d447c044c02cb6aa83fdae95
         with:
-          filename: test_output/coverage.xml
+          filename: output/coverage.xml
           badge: true
           fail_below_min: true
           format: markdown
