--- a/.dockerignore
+++ b/.dockerignore
@@ -75,3 +75,14 @@ dev
 
 # GitHub files
 .github
+
+# environment files - may contain secrets, handled separately in deployment
+.env*
+
+# Python cache files - will be regenerated during build, reduces image size
+__pycache__
+*.pyc
+.pytest_cache
+
+# test coverage reports - testing artifacts not needed in production
+.coverage
