--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,8 +13,8 @@ services:
       APP_ENV: 'docker-dev'
       PIPENV_VENV_IN_PROJECT: '1'
     # Ensure dependencies are installed before starting services
-    # Skip installs if dependencies already exist to speed up container startup
-    command: /bin/sh -c "([ -d node_modules ] || npm install) && cd /opt/app && ([ -f .venv/bin/python ] || pipenv install --dev --python python3.12) && npm run serve -- --no-temporal"
+    # Check if node_modules has content, not just if directory exists
+    command: /bin/sh -c "([ -n \"$(ls -A node_modules 2>/dev/null)\" ] || npm install) && ([ -f .venv/bin/python ] || pipenv install --dev --python python3.12) && npm run serve -- --no-temporal"
     # Override to root user for local development to avoid bind mount permission issues
     user: root
     depends_on:
