feat: optimize Dockerfile with multi-stage build (#533)
* feat: optimize Dockerfile with multi-stage build

- Implement multi-stage build to reduce image size from 3.88GB to 1.12GB (71% reduction)
- Remove unnecessary GUI libraries (libgtk, xvfb, xauth) not needed for production
- Remove build dependencies from final runtime image
- Use python:3.12-slim and node:22-alpine for smaller base images
- Fix Python virtualenv shebang paths for proper runtime execution
- Add proper dev/test dependency handling based on APP_ENV
- Maintain compatibility with existing docker-compose.dev.yml and docker-compose.test.yml
- Enable Trivy security scanning by reducing image size
- Improve build caching with better layer ordering
- Add comprehensive .dockerignore comments for excluded files
- Fix setuptools compatibility issue for pymongo compilation

* chore: remove .env* from .dockerignore

Environment files are handled separately in deployment process

* fix: resolved the docker-compose local setup error

---------

Co-authored-by: Namra2511 <namraptl25@gmail.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -75,3 +75,13 @@ dev
 
 # GitHub files
 .github
+
+
+
+# Python cache files - will be regenerated during build, reduces image size
+__pycache__
+*.pyc
+.pytest_cache
+
+# test coverage reports - testing artifacts not needed in production
+.coverage
