fix: allow app to connect to MongoDB database
- Add MongoDB port 27017 to app egress policy
- Enables direct database connections from Flask app
- Required for MONGODB_URI configuration

--- a/lib/kube/core/network-policy.yaml
+++ b/lib/kube/core/network-policy.yaml
@@ -60,6 +60,11 @@ spec:
     - ports:
         - protocol: TCP
           port: 443
+    
+    # Allow MongoDB database connections
+    - ports:
+        - protocol: TCP
+          port: 27017
 
 ---
 # Allow nginx ingress to reach our app
