--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ waitress = "==3.0.1"
 datadog-api-client = "==2.31.0"
 temporalio = ">=1.10.0"
 protobuf = "==5.29.5"
+urllib3 = ">=2.6.0"
 
 [dev-packages]
 black = "==24.8.0"
