--- a/.github/workflows/clean.yml
+++ b/.github/workflows/clean.yml
@@ -1,7 +1,7 @@
 name: clean
 
 on:
-  pull_request_target:
+  pull_request:
     types: [closed]
 
 # Ensures PR cleanup workflow has minimal permissions for security
