--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@datadog/browser-rum": "^6.6.4",
     "@datadog/browser-rum-react": "^6.6.4",
     "autoprefixer": "^10.4.18",
-    "axios": "0.21.1",
+    "axios": "^1.0.0",
     "clsx": "^2.1.0",
     "config": "^3.3.7",
     "cors": "^2.8.5",
@@ -66,6 +66,7 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "minimist": "1.2.5",
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
     "@types/config": "0.0.41",
@@ -108,7 +109,6 @@
   },
   "overrides": {
     "braces": "3.0.3",
-    "minimist": "^1.2.8",
     "nconf": "0.11.4"
   }
 }
