--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
-    "minimist": "1.2.5",
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
     "@types/config": "0.0.41",
@@ -109,6 +108,7 @@
   },
   "overrides": {
     "braces": "3.0.3",
+    "minimist": "^1.2.8",
     "nconf": "0.11.4"
   }
 }
