--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -233,6 +233,13 @@ jobs:
           trivyignores: ".trivyignore"
           exit-code: 1
           cache-dir: .trivy
+
+      - name: Check if report contains any real vulnerabilities
+        id: vuln_check
+        run: |
+          # Count how many vulnerabilities are listed in the markdown
+          COUNT=$(grep -c "CVE-" trivy-docker-report.md || true)
+          echo "vuln_count=$COUNT" >> $GITHUB_OUTPUT
           
       - name: Comment PR with audit results
         uses: peter-evans/create-or-update-comment@v4
