--- a/lib/kube/production/deployment.yaml
+++ b/lib/kube/production/deployment.yaml
@@ -1,3 +1,4 @@
+# checkov:skip=CKV2_K8S_6: NetworkPolicy exists in lib/kube/core/network-policy.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
