fix: add TMPDIR environment variable to temporal python-worker
- Set TMPDIR=/opt/app/tmp for python-worker container
- Fixes pipenv virtual environment creation issue
- Resolves CrashLoopBackOff in temporal deployments
- Applied to both preview and production environments

Fixes temporal worker failing with:
FileNotFoundError: No usable temporary directory found

--- a/lib/kube/preview/temporal-deployment.yaml
+++ b/lib/kube/preview/temporal-deployment.yaml
@@ -213,6 +213,9 @@ spec:
             capabilities:
               drop:
                 - ALL
+          env:
+            - name: TMPDIR
+              value: "/opt/app/tmp"
           command: ['pipenv', 'run', 'python', 'temporal_server.py']
           livenessProbe:
             exec:
