fix: configure pipenv to use writable directory for virtual environments
- Add PIPENV_VENV_IN_PROJECT=false to prevent venv creation in read-only workingDir
- Add WORKON_HOME=/opt/app/tmp/.virtualenvs to specify writable venv location
- Fixes 'destination is not write-able' error in python-worker container
- Applied to both preview and production temporal deployments

--- a/lib/kube/production/temporal-deployment.yaml
+++ b/lib/kube/production/temporal-deployment.yaml
@@ -217,6 +217,10 @@ spec:
           env:
             - name: TMPDIR
               value: "/opt/app/tmp"
+            - name: PIPENV_VENV_IN_PROJECT
+              value: "false"
+            - name: WORKON_HOME
+              value: "/opt/app/tmp/.virtualenvs"
           command: ['pipenv', 'run', 'python', 'temporal_server.py']
           volumeMounts:
             # Security: Use temporary volumes for writable directories since root filesystem is read-only
