--- a/lib/kube/preview/temporal-deployment.yaml
+++ b/lib/kube/preview/temporal-deployment.yaml
@@ -216,6 +216,10 @@ spec:
           env:
             - name: TMPDIR
               value: "/opt/app/tmp"
+            - name: PIPENV_VENV_IN_PROJECT
+              value: "false"
+            - name: WORKON_HOME
+              value: "/opt/app/tmp/.virtualenvs"
           command: ['pipenv', 'run', 'python', 'temporal_server.py']
           livenessProbe:
             exec:
