feat: updating deprecated change and removing used thing

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,21 +75,12 @@ jobs:
           branch_base: main
           pull_request_number: ${{ github.event.number }}
 
-  review:
-    if: github.event.pull_request.state == 'open' && github.event.pull_request.draft == false
-    runs-on: ubuntu-latest
-    steps:
-      - name: Placeholder for code review
-        run: |
-          echo "Code review placeholder"
-          echo "Future implementation: AI-powered review for architecture, security, and best practices"
-
   scan: 
     if: github.event.pull_request.state == 'open' && github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
 
       - name: Cache Trivy DB
         uses: actions/cache@v4
