fix: temporal worker crashes by aligning workingDir with Dockerfile
- Change workingDir from /opt/app/src/apps/backend to /app to match Dockerfile
- Update command to use correct path: src/apps/backend/temporal_server.py
- Remove env vars that forced new venv creation in tmp directory
- This fixes CrashLoopBackOff due to pipenv not finding pre-built .venv

--- a/lib/kube/production/temporal-deployment.yaml
+++ b/lib/kube/production/temporal-deployment.yaml
@@ -205,7 +205,7 @@ spec:
         - name: python-worker
           image: $KUBE_DEPLOYMENT_IMAGE:$KUBE_DEPLOYMENT_TAG@$KUBE_DEPLOYMENT_DIGEST
           imagePullPolicy: Always
-          workingDir: /opt/app/src/apps/backend
+          workingDir: /app
           # Security: Block privilege escalation, make filesystem read-only, drop all capabilities
           securityContext:
             allowPrivilegeEscalation: false
@@ -214,14 +214,7 @@ spec:
             capabilities:
               drop:
                 - ALL
-          env:
-            - name: TMPDIR
-              value: "/opt/app/tmp"
-            - name: PIPENV_VENV_IN_PROJECT
-              value: "false"
-            - name: WORKON_HOME
-              value: "/opt/app/tmp/.virtualenvs"
-          command: ['pipenv', 'run', 'python', 'temporal_server.py']
+          command: ['pipenv', 'run', 'python', 'src/apps/backend/temporal_server.py']
           volumeMounts:
             # Security: Use temporary volumes for writable directories since root filesystem is read-only
             - name: tmp
