--- a/lib/kube/preview/temporal-deployment.yaml
+++ b/lib/kube/preview/temporal-deployment.yaml
@@ -204,7 +204,7 @@ spec:
         - name: python-worker
           image: $KUBE_DEPLOYMENT_IMAGE:$KUBE_DEPLOYMENT_TAG@$KUBE_DEPLOYMENT_DIGEST
           imagePullPolicy: Always
-          workingDir: /opt/app/src/apps/backend
+          workingDir: /app
           # Security: Block privilege escalation, make filesystem read-only, drop all capabilities
           securityContext:
             allowPrivilegeEscalation: false
@@ -213,14 +213,7 @@ spec:
             capabilities:
               drop:
                 - ALL
-          env:
-            - name: TMPDIR
-              value: "/opt/app/tmp"
-            - name: PIPENV_VENV_IN_PROJECT
-              value: "false"
-            - name: WORKON_HOME
-              value: "/opt/app/tmp/.virtualenvs"
-          command: ['pipenv', 'run', 'python', 'temporal_server.py']
+          command: ['pipenv', 'run', 'python', 'src/apps/backend/temporal_server.py']
           livenessProbe:
             exec:
               command: ["true"]
