Add external MongoDB port 27017 to network policy
- Allow external MongoDB connections on port 27017 for DigitalOcean managed databases
- Ensures both internal and external MongoDB connectivity for all deployments

--- a/lib/kube/core/network-policy.yaml
+++ b/lib/kube/core/network-policy.yaml
@@ -65,6 +65,14 @@ spec:
     - ports:
         - protocol: TCP
           port: 27017
+    
+    # Allow external database connections (DigitalOcean managed databases)
+    - to: []  # Allow to any external IP
+      ports:
+        - protocol: TCP
+          port: 25061  # DigitalOcean PostgreSQL port
+        - protocol: TCP
+          port: 27017  # External MongoDB port
 
 ---
 # Allow nginx ingress to reach our app
